--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -116,12 +116,12 @@
                     Later on however it was discovered that they were just moving like this because they were really cold.</dd>
             </dl>
         </p>
-        <p>For more of my research, see my <a href="http://example.com">exotic dance research page</a>. </p>
+        <p>For more of my research, see my <a href="http://example.com/">exotic dance research page</a>. </p>
         <p>
             Yours sincerely, <br>
             Dr Eleanor Gaye</p>
         <p>
-            University of Awesome motto: <q cite="http://example.com">Be awesome to each other.</q> -- <i>Bill S Preston, Esq</i>
+            University of Awesome motto: <q cite="http://example.com/">Be awesome to each other.</q> -- <i>Bill S Preston, Esq</i>
         </p>
 
 
