--- a/homepage-overhaul/index.html
+++ b/homepage-overhaul/index.html
@@ -15,7 +15,7 @@
 <!-- PAGE HEADER -->        
         <!-- Wrap the top level heading in a header element -->
     <header>  
-            <h1>truffaut&nbsp;&nbsp;//&nbsp;&nbsp;portfolio</h1>
+            <h1>truffaut&nbsp;&nbsp;<span>//</span>&nbsp;&nbsp;portfolio</h1>
     </header>  
 <!-- NAVIGATION BAR --> 
     <nav>
@@ -23,20 +23,20 @@
         <img
             src="images/patricia-frost-125-edited-medium.jpg" 
             alt="picture of Patricia_Frost" />
-                <ul>
-                    <li><a href="letter-markup">Letter Markup</a></li>
-                    <li><a href="planets-table">Planets Table</a></li>
-                    <li><a href="wanted-poster">Wanted Poster</a></li>
-                    <li><a href="school-site">School Site</a></li>
-                    <li><a href="blog">Blog</a></li>
-                </ul>
+        <ul>
+            <li><a href="letter-markup">Letter Markup</a></li>
+            <li><a href="planets-table">Planets Table</a></li>
+            <li><a href="wanted-poster">Wanted Poster</a></li>
+            <li><a href="school-site">School Site</a></li>
+            <li><a href="blog">Blog</a></li>                                        
+        </ul>
         
         <!-- Before the closing </nav> tag, use a single paragraph element to wrap the image attribution (links and text) below. -->
-            <p>
-                    <a href="https://www.flickr.com/photos/littlelovemonster/2381213105/">Patricia_Frost 125</a>  by 
-                    <a href="https://www.flickr.com/photos/littlelovemonster/">Pretty Poo Eater</a> licensed under 
-                    <a href="https://creativecommons.org/licenses/by-sa/2.0/legalcode">CC BY SA 2.0</a>
-            </p>
+         <p>
+           <a href="https://www.flickr.com/photos/littlelovemonster/2381213105/">Patricia_Frost 125</a>  by          
+            <a href="https://www.flickr.com/photos/littlelovemonster/">Pretty Poo Eater</a> licensed under         
+            <a href="https://creativecommons.org/licenses/by-sa/2.0/legalcode">CC BY SA 2.0</a>        
+        </p>
     </nav>
 <!-- MAIN CONTENT AREA -->        
     <main>
@@ -129,7 +129,7 @@
         
             <p class="return">
                 <a 
-                    href="/homepage-overhaul/index.html">Back to top
+                    href="#top">Back to top
                 </a>
             </p>
             <p class="copyright">&copy; 
